fixed spacing between cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,22 +7,32 @@ header {
     font-size: 2em;
 }
 
-body,
-button {
+body {
     background-color: darkgrey;
 }
 
-#content button {
+button {
     border: none;
-    font-size: 1.5em;
-    
 }
 
 #content {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding-top: 3%;
+}
+
+#addBook {
+    background-color: darkgrey;
+    border: none;
+    font-size: 1.5em;
+    padding: 5px;
+    width: 15%;
+}
+
+#addBook:hover {
+    background-color: lightgrey;
 }
 
 #bookForm {
@@ -48,6 +58,10 @@ button {
     border-radius: 5px;
 }
 
+input:focus {
+    outline: none;
+}
+
 #bookForm button {
     background-color: rgb(5, 224, 5);
     border-radius: 5px;
@@ -61,9 +75,13 @@ button {
 }
 
 #books {
-    padding: 20px;
+    width: 100%;
+    padding: 2%;
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
+    column-gap: 3%;
+    row-gap: 20px;
+    
 }
 
 .card {
@@ -72,20 +90,25 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    width: 20%;
+    gap: 20px;
+    width: 31%;
     padding: 10px;
+    border-radius: 5px;
 }
 
 .card button {
     width: 100%;
     border-radius: 5px;
+    padding: 10px;
 }
 
 .green {
-    background-color: green;
+    background-color: rgb(107, 249, 107);
 }
 
 .red {
-    background-color: red;
+    background-color: rgb(248, 116, 116);
 }
+
+
+
